hphp/hack/test/typecheck/readonly/readonly_globals.php.exp
File "readonly_globals.php", line 5, characters 8-20:
This call is not allowed because its capabilities are incompatible with the context (Typing[4390])
  File "readonly_globals.php", line 3, characters 43-47:
  From this declaration, the context of this function body provides the capability set {ImplicitPolicy, ReadGlobals, System, WriteProperty}
  File "stdlib/builtins_globals_pseudofunctions.hhi", line 17, characters 36-42:
  But the function being called requires the capability AccessGlobals
